[package]
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "The Rust Project Developers"]
description = "Big integer implementation for Rust"
documentation = "https://docs.rs/num-bigint-dig"
homepage = "https://github.com/dignifiedquire/num-bigint"
keywords = ["mathematics", "numerics", "bignum"]
categories = [ "algorithms", "data-structures", "science" ]
license = "MIT/Apache-2.0"
name = "num-bigint-dig"
repository = "https://github.com/dignifiedquire/num-bigint"
version = "0.6.0"
readme = "README.md"
build = "build.rs"
autobenches = false

[package.metadata.docs.rs]
features = ["std", "serde", "rand", "prime"]

[dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies.smallvec]
version = "1.0.0"
#default-features = false
git = "https://github.com/mesalock-linux/rust-smallvec-sgx"

[dependencies.num-integer]
version = "0.1.39"
#default-features = false
git = "https://github.com/mesalock-linux/num-integer-sgx"

[dependencies.num-traits]
version = "0.2.4"
#default-features = false
git = "https://github.com/mesalock-linux/num-traits-sgx"

[dependencies.num-iter]
version = "0.1.37"
#default-features = false
git = "https://github.com/mesalock-linux/num-iter-sgx"

[dependencies.rand]
optional = true
version = "0.7"
#default-features = false
git = "https://github.com/mesalock-linux/rand-sgx"
tag = "v0.7.3_sgx1.1.2"

[dependencies.zeroize]
version = "1.1.0"
default-features = false
optional = true
features = ["alloc", "zeroize_derive"]

[dependencies.serde]
optional = true
version = "1.0"
#default-features = false
git = "https://github.com/mesalock-linux/serde-sgx"

[dependencies.libm]
version = "0.2.1"

[dependencies.lazy_static]
version = "1.2.0"
default-features = false
# no_std feature is an anti-pattern. Why, lazy_static, why?
# See https://github.com/rust-lang-nursery/lazy-static.rs/issues/150
features = ["spin_no_std"]

[dependencies.byteorder]
version = "1.2.7"
#default-features = false
git = "https://github.com/mesalock-linux/byteorder-sgx"

[dev-dependencies]
#rand_chacha = "0.2"
#rand_xorshift = "0.2"
#rand_isaac = "0.2"
#rand = { version = "0.7", features = ["small_rng"] }

#[dev-dependencies.serde_test]
#version = "1.0"

#[build-dependencies]
#autocfg = "0.1.5"

[features]
default = ["std", "i128", "u64_digit", "mesalock_sgx"]
i128 = ["num-integer/i128", "num-traits/i128"]
std = ["num-integer/std", "num-traits/std", "smallvec/write", "rand/std", "serde/std", "mesalock_sgx"]
u64_digit = []
prime = ["rand"]
nightly = ["rand/nightly"]
mesalock_sgx = ["sgx_tstd"]
