[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
num-bigint-dig = { path = "../../..", features = ["rand", "i128", "u64_digit", "prime", "zeroize", "nightly", "serde"] }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
num-integer = { git = "https://github.com/mesalock-linux/num-integer-sgx" }
rand = { tag = "v0.6.5_sgx1.0.9",  git = "https://github.com/mesalock-linux/rand-sgx", features = ["small_rng"] }
smallvec = { version = "0.6", default-features = false }
#rand_chacha = { tag = "v0.6.5_sgx1.0.9", git = "https://github.com/mesalock-linux/rand-sgx" }
rand_isaac = { tag = "v0.6.5_sgx1.0.9", git = "https://github.com/mesalock-linux/rand-sgx" }
rand_xorshift = { tag = "v0.6.5_sgx1.0.9", git = "https://github.com/mesalock-linux/rand-sgx" }
serde_test = { git = "https://github.com/mesalock-linux/serde-sgx" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tunittest = {rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
